# mlops-databricks

./: .gitignore  README.md  commands.txt  databricks.yml  prepare_dataset.py  project_config.yml  pyproject.toml  pyproject_test.toml  requirements.txt
fe_model_serving/: refresh_monitor.py
notebooks/: 02_03.mlflow_experiment.py  02_04.log_model.py  02_05.log_custom_model.py  02_06.register_model.py  03_02.feature_table_feature_func.py  03_03.fe_model.py  04_02.create_feature_spec.py  04_03.deploy_endpoints.py  04_04.call_endpoints.py  05_02.create_extra_features_table.py  06_02a.send_requests.py  06_02b.analyze_inference_table.py  06_03.lakehouse_monitoring.py  Install dependencies.py  mlflow_experiment.json  model_version.json  run_info.json
